deploy/k8s/service.yaml
# Generated by IBM TransformationAdvisor
# Mon Feb 26 10:00:30 UTC 2024
apiVersion: v1
kind: Service
metadata:
  labels:
    app: modresorts10war
  name: modresorts10war
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: modresorts10war
