deploy/k8s/route.yaml
# Generated by IBM TransformationAdvisor
# Mon Feb 26 10:00:30 UTC 2024
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: modresorts10war
  name: modresorts10war
spec:
  path:
    /
  port:
    targetPort: http
  to:
    kind: Service
    name: modresorts10war
    weight: 100
